# BirdSpotter

./: .gitignore  .readthedocs.yml  LICENSE.txt  MANIFEST.in  README.md  README_old.md  UNKNOWN-0.0.0-py2.7.egg  requirements.txt  setup.py  tutorial.ipynb
BirdSpotter/: pyproject.toml
BirdSpotter/birdspotter/: BirdSpotter.py  __init__.py
BirdSpotter/tests/: test_birdspotter.py
birdspotter/: BirdSpotter.py  __init__.py  user_influence.py  utils.py
birdspotter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: Makefile  conf.py  make.bat  requirements.txt
docs/_build/doctrees/: birdspotter.doctree  environment.pickle  index.doctree  modules.doctree  tests.doctree
docs/_build/doctrees/source/: birdspotter.doctree  modules.doctree  tests.doctree
docs/_build/html/: .buildinfo  birdspotter.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  tests.html
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_sources/source/: birdspotter.rst.txt
docs/_build/html/source/: birdspotter.html  modules.html  tests.html
docs/source/: README.md  birdspotter.rst  conf.py  index.rst  modules.rst  tests.rst
wsdm_demo/: WSDM Demo v3.ipynb
