[tool.poetry]
name = "BirdSpotter"
version = "0.1.0"
description = "A package which provides an influence and bot detection toolkit for twitter"
authors = ["Rohit Ram <rohit.ram@anu.edu.au>"]

[tool.poetry.dependencies]
python = "*"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
